added link to open source

--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
         </div>
       </div>
     </div>
-
+    <p class="coded">
+      <a href="https://loving-pasteur-b047db.netlify.app"> Open-source </a> code
+      by Nessa DC
+    </p>
     <script src="script.js"></script>
   </body>
 </html>
