html open source adaptation

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
     </div>
     <p class="coded">
-      <a href="https://loving-pasteur-b047db.netlify.app"> Open-source </a> code
+      <a href="https://github.com/Nessa-DC/w-app-project"> Open-source </a> code
       by Nessa DC
     </p>
     <script src="script.js"></script>
